added heading and footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
+    <h1>AI Poem Generator</h1>
+    <footer>
+      This project is coded by
+      <a href="https://github.com/fiftyshaddygirl" target="_blank">
+        Cynthia Kazan</a
+      >
+      and its open sourced on
+      <a href="https://github.com/fiftyshaddygirl/poem-project" target="_blank">
+        Github</a
+      >
+      and hosted on
+      <a href="https://aipoemgenerator-project.netlify.app/" target="_blank">
+        Netlify</a
+      >
+    </footer>
     <script src="src/script.js"></script>
   </body>
 </html>
