added basic html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <h1>AI Poem Generator</h1>
+    <header>
+      <h1>AI Poem Generator</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the poem"
+          autofocus
+          autocomplete="off"
+          required
+        />
+        <input type="submit" value="🔎" />
+      </form>
+    </main>
     <footer>
       This project is coded by
       <a href="https://github.com/fiftyshaddygirl" target="_blank">
