--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         />
         <input type="submit" value="🔎" />
       </form>
+      <div>
+        A crimson blush, a velvet grace,
+        <br />
+        The rose, a smile upon its face.
+        <br />
+        With thorns that prick, a gentle scent,
+        <br />
+        A symbol of love, divinely sent.
+      </div>
     </main>
     <footer>
       This project is coded by
