--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>AI Poem Generator</title>
   </head>
   <body>
@@ -18,7 +19,7 @@
         <h1>AI Poem Generator</h1>
       </header>
       <main>
-        <form>
+        <form id="form-generator">
           <input
             type="text"
             placeholder="Enter the topic of the poem"
@@ -29,15 +30,7 @@
           />
           <input type="submit" value="🔎" class="search-button" />
         </form>
-        <div class="poem">
-          A crimson blush, a velvet grace,
-          <br />
-          The rose, a smile upon its face.
-          <br />
-          With thorns that prick, a gentle scent,
-          <br />
-          A symbol of love, divinely sent.
-        </div>
+        <div class="poem" id="poem"></div>
       </main>
       <footer>
         This project is coded by
