--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <title>AI Poem Generator</title>
   </head>
   <body>
@@ -27,6 +28,7 @@
             autocomplete="off"
             required
             class="topic-input"
+            id="topic-input"
           />
           <input type="submit" value="🔎" class="search-button" />
         </form>
