added user experience

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <form id="form-generator">
           <input
             type="text"
-            placeholder="Enter the topic of the poem"
+            placeholder="Enter the topic. ie.flower, love, etc."
             autofocus
             autocomplete="off"
             required
